--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Documentation files (local only)
+QUICK_START.md
+backend_endpoints.md
+feature_to_endpoint.md
+frontend_integration.md
+test-integration.sh
+CLEAN_ARCHITECTURE.md
+IMPLEMENTATION_SUMMARY.md
+INTEGRATION_README.md
